# NRV

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  ReadMe.md  TODO.md  agent.md  bash_nrv  docs-env.yaml  electrodes.py  environment.yml  extracellular.py  nrv-env.yaml  pyproject.toml  pyproject.toml.prov  setup.py  todo.md
.github/: Workflow_issues.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation-correction.yml
.github/linters/: .flake8  .isort.cfg  .mypy.ini  .python-lint
.github/rulesets/: README.md  dev-protection-bot-bypass.template.json  master-approval-bypass.template.json  master-core.template.json  staging-approval-bypass.template.json  staging-core.template.json
.github/workflows/: authentication.yml  bump_version.yml  coordination_dev.yml  coordination_dev_PR.yml  coordination_dev_dispatch.yml  coordination_master.yml  coordination_stable.yml  coordination_staging.yml  create_release.yml  docker-image.yml  linter.yml  pipy_release.yml  prebuild_docs.yaml  prebuild_docs.yaml.prov  prebuild_docs.yml  publish_stable_docs.yml  pypi_release.yml  pytest-deployment.yml.prov  pytest-e2e.yml  pytest-e2e.yml.prov  pytest-unit.yml.prov  step_bump_version.yml  step_dev_bump_version.yml  step_dev_merge_to_staging.yml  step_linter.yml  step_master_create_release.yml  step_master_docker-image.yml  (+18 more)
Example/: 01_propagation_Vmem.ipynb  01_propagation_Vmem.rst  02_activation_function.ipynb  02_activation_function.rst  03_LIFE_activation_function.ipynb  03_LIFE_activation_function.rst  04_AP_particles.ipynb  04_AP_particles.rst  05_KES_conduction_block.ipynb  08_KES_block_unmyelinated.ipynb  09_Prepulse_waveform.ipynb  10_Slowly_rising.ipynb  10_Slowly_rising.rst  11_combining_stimulus.ipynb  11_combining_stimulus.rst  12_MRG_structural_parameters.ipynb  12_MRG_structural_parameters.rst  13_axon_distributions.ipynb  13_axon_distributions.rst  14_activation_function_cuff.ipynb  14_activation_function_cuff.rst  15_activation_threholds.ipynb  16_activation_threholds_arbitrary.ipynb  17_threshold_search_dispatcher.ipynb  18_Action_Potential_Analysis.ipynb  7_DC_block.ipynb  7_DC_block.rst  8_KES_block_unmyelinated.rst  9_Prepulse_waveform.ipynb  9_Prepulse_waveform.rst  LIFE_1000_um_delect_100_um_ftp.csv  LIFE_1000_um_delect_500_um_ftp.csv  LIFE_100_um_delect_100_um_ftp.csv  LIFE_100_um_delect_500_um_ftp.csv  SX_stimuli.py  Tutorial_5.ipynb  bhadra.rst  example_3.ipynb  example_4.ipynb  example_o01 copy.ipynb  (+20 more)
Tutorials/: 1_intracellular_stimulation.ipynb  2_propagation_velocity.ipynb  3_nerve_simulation.ipynb  3_single_fiber_simulation.ipynb  3_single_fiber_simulation.py  3_single_fiber_simulation2.ipynb  4_nerve_simulation.ipynb  4_nerve_simulation.py  4_nerve_simulation.rst  518_nerve_results2.json  5_first_optimization.ipynb  5_first_optimization.rst  5_first_optimization_full.ipynb  Example_optimization_nerve.ipynb  nrv_save.json  plot_optim.ipynb
__nodoc_examples/: GALLERY_HEADER.md
__nodoc_tutorials/: GALLERY_HEADER.md
_bckp_tutorials/: 1_intracellular_stimulation.py  2_propagation_velocity.ipynb
_tutorials/: 4_nerve_simulation.py  5_first_optimization.py
conda/: nrv_linux.yaml  nrv_macos.yaml  nrvdev_linux.yaml  nrvdev_macos.yaml  nrvdoc_linux.yaml  nrvdoc_macos.yaml  tests-env.yaml
doc/: test.md
docker/: environment.yml
docs/: Makefile  clean_outputs.py  conf.py  copy_tutorials.py  devcorner.rst  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  nrv.backend.rst  nrv.fmod.FEM.fenics_utils.rst  nrv.fmod.FEM.mesh_creator.rst  nrv.fmod.FEM.rst  nrv.fmod.rst  nrv.nmod.rst  nrv.optim.rst  nrv.rst  nrv.utils.rst  quickstart.rst  requirements.txt  rtd_requierements.txt  scientific.rst  sg_execution_times.rst  text.md  tutorials.rst  usersguide.rst
docs_old/: NRV_tutorials.py  examples.rst  tutorials.rst
examples/: GALLERY_HEADER.rst
nrv/: .flake8  CL_discretization.py  CL_postprocessing.py  CL_simulations.py  FEM.py  FL_postprocessing.py  MCore.py  NRV.ini  __init__ copy.py  __init__.py  axons.py  compileMods.py  electrodes.py  extracellular.py  fascicle_generator.py  fascicles.py  log_interface.py  materials.py  myelinated.py  nerves.py  nrv2calm  recording.py  saving_handler.py  stimulus.py  thin_myelinated.py  units.py  unmyelinated.py
test/: README.md  conftest.py
tests/: 069_test_log_interface.py  071_test_CL_file_handeler.py  518_nerve_results.json  518_nerve_results2.json  70_fascicle_0.json  NRV_test  README.md  conftest.py  log_NRV_test.txt  nervemshcreator.json  test.json  test_audit.csv
tutorials/: 1_intracellular_stimulation.py  2_propagation_velocity.py  3_single_fiber_simulation.py  4_nerve_simulation.ipynb  4_nerve_simulation.py  5_first_optimization.ipynb  5_first_optimization.py  6_play_with_eit.ipynb  6_play_with_eit.py  GALLERY_HEADER.md  GALLERY_HEADER.rst
(+13761 files in other folders)
