# Meta information: PyPI and Pip
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'nrv-py'
authors = [{name='Florian Kolbl - Roland Giraud - Louis Regnacq - Thomas Couppey'}]
license = {file='License.txt'}
keywords = ['neuronal simulation', 'computer simulation', 'neurosciences',
            'multiphysics', 'Neuron', 'Comsol']
classifiers = [
    'License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Natural Language :: English']
readme = 'pypi.md'
requires-python = '>=3.6'
dependencies = ['mph', 'numpy','scipy','neuron','matplotlib','numba','ezdxf','icecream','pyswarms']
dynamic = ['version', 'description']

[project.urls]
Documentation = 'https://nrv.readthedocs.io'
Source = 'https://github.com/fkolbl/NRV'


[project.optional-dependencies]
dev = [
    'Sphinx >= 6.1',
    'Furo',
]
